@@ -401,13 +401,13 @@
     "ehi_buffs_skills_enforcer_bulletstorm" : "Свинцовый ливень",
 
     "ehi_buffs_skills_ghost_menu" : "Призрак",
-    "ehi_buffs_skills_ghost_shinobi_subclass" : "ШИноби",
+    "ehi_buffs_skills_ghost_shinobi_subclass" : "Шиноби",
     "ehi_buffs_skills_ghost_sixth_sense_initial" : "Шестое чувство (Начальная задержка)",
     "ehi_buffs_skills_ghost_sixth_sense_marked" : "Шестое чувство (Отмеченные единицы)",
     "ehi_buffs_skills_ghost_sixth_sense_marked_desc" : "показывать датчик, показывающий, сколько юнитов в настоящее время помечено «Шестым чувством».",
     "ehi_buffs_skills_ghost_sixth_sense_refresh" : "Шестое чувство (Задержка обновления)",
-    "ehi_buffs_skills_ghost_artful_dodger_subclass" : "Artful Dodger",
-    "ehi_buffs_skills_ghost_dire_need" : "Dire Need",
+    "ehi_buffs_skills_ghost_artful_dodger_subclass" : "Неуловимый",
+    "ehi_buffs_skills_ghost_dire_need" : "Паническая атака",
     "ehi_buffs_skills_ghost_silent_killer_subclass" : "Бесшумный убийца",
     "ehi_buffs_skills_ghost_second_wind" : "Второе дыхание",
     "ehi_buffs_skills_ghost_unseen_strike" : "Исподтишка",
