@@ -1,3 +1,6 @@
+r106 (06. 12. 2022):
+Fixed a crash when waypoints are modified by other HUD
+
 r105 (05. 12. 2022):
 Fixed syncing with other EHI players
 
